# advent-of-code

./: .gitignore  README.md  pyproject.toml
advent2022/day1/: task1.py
advent2022/day10/: day10.py  output.txt
advent2022/day11/: day11.py
advent2022/day12/: day12.py
advent2022/day13/: day13.py
advent2022/day14/: day14.py
advent2022/day15/: day15.py
advent2022/day2/: day2.py
advent2022/day3/: day3.py
advent2022/day4/: day4.py
advent2022/day5/: day5.py  starts.txt
advent2022/day6/: day6.py
advent2022/day7/: day7.py
advent2022/day8/: day8.py
advent2022/day9/: day9.py
